syntax = "proto3";
option go_package = "practice/grpc/hello_world";

package hello_world;


service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloSpecific (RepeatedHelloRequest) returns (HelloReply) {}
    
  }
  
  // The request message containing the user's name.
  message HelloRequest {
    string name = 1;
  }
  
  // The response message containing the greetings
  message HelloReply {
    string message = 1;
  }
  
  message RepeatedHelloRequest{
    repeated string names = 1;
  }